Update new features

--- a/sample-config.conf
+++ b/sample-config.conf
@@ -1,11 +1,13 @@
 [Cookies]
-shodan = None
-censys = None
-fofa = None
-zoomeye = None
+shodan = 
+censys = 
+fofa = 
+zoomeye = 
+github = 
 
 [Credentials]
 shodan = username:password
 censys = username:password
 fofa = username:password
-zoomeye = username:password
+github = username:password
+
