--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ testing*
 modules/__pycache__/
 core/__pycache__/
 output/*
+output*
+*output
 
 #chromedriver
 core/chromedriver*
@@ -29,7 +31,7 @@ static-server/media-root/status/cfe/
 
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
+**__pycache__/
 *.py[cod]
 *$py.class
 
